<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:id="@+id/iv_home_image"
        android:layout_width="wrap_content"
        android:layout_height="376dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="75dp"
        android:background="#00000000"
        android:src="@drawable/ic_wiwo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/home_fragment_text_1"
        android:translationY="-0.95sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_home_image" />

    <TextView
        android:id="@+id/tv_home_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/home_fragment_text_2"
        android:textColor="@color/red"
        android:translationY="-0.95sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_1" />

    <Button
        android:id="@+id/btn_home_enter_store"
        android:layout_width="264dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="32dp"
        android:text="@string/home_fragment_button_1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_2" />

    <TextView
        android:id="@+id/tv_home_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16sp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/home_fragment_text_3"
        android:textColor="@color/red"
        android:translationY="-0.95sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_home_enter_store" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lineSpacingExtra="-8sp"
        android:text="@string/home_fragment_text_4"
        android:textSize="32sp"
        android:layout_marginStart="16dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_3" />

    <Button
        android:id="@+id/btn_home_change"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner"
        android:clipToOutline="true"
        android:text="@string/home_fragment_button_2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home_3" />
</androidx.constraintlayout.widget.ConstraintLayout>